# inframap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.ru.md  SPEC.md  VIEWER_SPEC.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pages.yml
deploy/: README.md
deploy/helm/inframap-viewer/: .helmignore  Chart.yaml  values.yaml
deploy/helm/inframap-viewer/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
src/inframap/: cli.py  emitter.py  models.py  parser.py  schema_dump.py  validator.py
src/inframap/schema/: v1.json
tests/: conftest.py  test_emitter.py  test_parser.py  test_schema.py  test_validator.py
tests/fixtures/invalid/: bad_color.yaml  bad_id_format.yaml  bad_kind.yaml  bad_url.yaml  cyclic_parent.yaml  duplicate_call_id.yaml  duplicate_group_ids.yaml  duplicate_service_ids.yaml  self_call.yaml  self_parent.yaml  unknown_group.yaml  unknown_parent.yaml
tests/fixtures/valid/: minimal.yaml  nested_groups.yaml
viewer/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
viewer/src/: App.svelte  app.css  types-shims.d.ts  types.ts
viewer/src/components/: EmptyState.svelte  HelpOverlay.svelte  Legend.svelte  SearchBar.svelte  ServicePanel.svelte  StatsPanel.svelte  Tooltip.svelte
viewer/src/lib/: cy-extensions.ts  export.ts  graph.ts  hover-tooltip.ts  i18n.svelte.ts  interactions.ts  kinds.ts  loader.ts  positions.ts  share.ts  stats.ts  theme.ts
viewer/src/sample/: infra.json
